{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 116,
  "lineage": "72bd0b82-6bef-a883-e61a-c0e0a2bbcd4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a341250ecd6e607d",
            "arn": "arn:aws:ec2:ca-west-1:854882517278:elastic-ip/eipalloc-0a341250ecd6e607d",
            "association_id": "eipassoc-0e936e489f111a949",
            "domain": "vpc",
            "id": "eipalloc-0a341250ecd6e607d",
            "network_border_group": "ca-west-1",
            "network_interface": "eni-026fc2856aa5e7487",
            "private_dns": "ip-10-0-10-60.ca-west-1.compute.internal",
            "private_ip": "10.0.10.60",
            "public_dns": "ec2-16-174-72-202.ca-west-1.compute.amazonaws.com",
            "public_ip": "16.174.72.202",
            "public_ipv4_pool": "amazon",
            "region": "ca-west-1",
            "tags": {
              "Name": "EIP1"
            },
            "tags_all": {
              "Name": "EIP1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "eipalloc-0a341250ecd6e607d",
            "region": "ca-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089386481943b9d82",
            "arn": "arn:aws:ec2:ca-west-1:854882517278:elastic-ip/eipalloc-089386481943b9d82",
            "association_id": "eipassoc-0ae63a030de012a5a",
            "domain": "vpc",
            "id": "eipalloc-089386481943b9d82",
            "network_border_group": "ca-west-1",
            "network_interface": "eni-05978df1898a718f7",
            "private_dns": "ip-10-0-20-83.ca-west-1.compute.internal",
            "private_ip": "10.0.20.83",
            "public_dns": "ec2-40-176-216-179.ca-west-1.compute.amazonaws.com",
            "public_ip": "40.176.216.179",
            "public_ipv4_pool": "amazon",
            "region": "ca-west-1",
            "tags": {
              "Name": "EIP2"
            },
            "tags_all": {
              "Name": "EIP2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "eipalloc-089386481943b9d82",
            "region": "ca-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:internet-gateway/igw-0ae9fea926bb6b2b3",
            "id": "igw-0ae9fea926bb6b2b3",
            "owner_id": "854882517278",
            "region": "ca-west-1",
            "tags": {
              "Name": "IGW-custom_VPC"
            },
            "tags_all": {
              "Name": "IGW-custom_VPC"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "igw-0ae9fea926bb6b2b3",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:loadbalancer/app/WebALB/a899afaa4f6da12c",
            "arn_suffix": "app/WebALB/a899afaa4f6da12c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebALB-1056438617.ca-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:loadbalancer/app/WebALB/a899afaa4f6da12c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebALB",
            "preserve_host_header": false,
            "region": "ca-west-1",
            "security_groups": [
              "sg-0170fb5d08903befe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0363445d808e513f0"
              },
              {
                "subnet_id": "subnet-0b51dddc8e07c9d84"
              }
            ],
            "subnets": [
              "subnet-0363445d808e513f0",
              "subnet-0b51dddc8e07c9d84"
            ],
            "tags": {
              "Name": "WebALB"
            },
            "tags_all": {
              "Name": "WebALB"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z06473681N0SF6OS049SD"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:loadbalancer/app/WebALB/a899afaa4f6da12c"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:listener/app/WebALB/a899afaa4f6da12c/14c083d4bc0c7cf7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:targetgroup/WebTG/90047c4f0870f77d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:listener/app/WebALB/a899afaa4f6da12c/14c083d4bc0c7cf7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:loadbalancer/app/WebALB/a899afaa4f6da12c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ca-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:listener/app/WebALB/a899afaa4f6da12c/14c083d4bc0c7cf7"
          },
          "dependencies": [
            "aws_lb.web-alb",
            "aws_lb_target_group.web-tg",
            "aws_security_group.albsg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:targetgroup/WebTG/90047c4f0870f77d",
            "arn_suffix": "targetgroup/WebTG/90047c4f0870f77d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:targetgroup/WebTG/90047c4f0870f77d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-west-1:854882517278:loadbalancer/app/WebALB/a899afaa4f6da12c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ca-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "WebTG"
            },
            "tags_all": {
              "Name": "WebTG"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:854882517278:targetgroup/WebTG/90047c4f0870f77d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a341250ecd6e607d",
            "association_id": "eipassoc-0e936e489f111a949",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07f9d58c3199b5174",
            "network_interface_id": "eni-026fc2856aa5e7487",
            "private_ip": "10.0.10.60",
            "public_ip": "16.174.72.202",
            "region": "ca-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b51dddc8e07c9d84",
            "tags": {
              "name": "NATGW1"
            },
            "tags_all": {
              "name": "NATGW1"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "nat-07f9d58c3199b5174",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089386481943b9d82",
            "association_id": "eipassoc-0ae63a030de012a5a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d638e83bb1b5703a",
            "network_interface_id": "eni-05978df1898a718f7",
            "private_ip": "10.0.20.83",
            "public_ip": "40.176.216.179",
            "region": "ca-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0363445d808e513f0",
            "tags": {
              "name": "NATGW2"
            },
            "tags_all": {
              "name": "NATGW2"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "nat-0d638e83bb1b5703a",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:route-table/rtb-0ba6f34919d92e493",
            "id": "rtb-0ba6f34919d92e493",
            "owner_id": "854882517278",
            "propagating_vgws": [],
            "region": "ca-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f9d58c3199b5174",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT_1"
            },
            "tags_all": {
              "Name": "Private_RT_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtb-0ba6f34919d92e493",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.nat-gw-1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:route-table/rtb-040aa0ee033973c51",
            "id": "rtb-040aa0ee033973c51",
            "owner_id": "854882517278",
            "propagating_vgws": [],
            "region": "ca-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d638e83bb1b5703a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT_2"
            },
            "tags_all": {
              "Name": "Private_RT_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtb-040aa0ee033973c51",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.nat-gw-2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:route-table/rtb-0adcc65e9e9fdc163",
            "id": "rtb-0adcc65e9e9fdc163",
            "owner_id": "854882517278",
            "propagating_vgws": [],
            "region": "ca-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae9fea926bb6b2b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtb-0adcc65e9e9fdc163",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f90860bfaf9e32b",
            "region": "ca-west-1",
            "route_table_id": "rtb-0ba6f34919d92e493",
            "subnet_id": "subnet-0a887f0a450bb60a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtbassoc-04f90860bfaf9e32b",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.nat-gw-1",
            "aws_route_table.private_rt_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015ffab55a71f508f",
            "region": "ca-west-1",
            "route_table_id": "rtb-040aa0ee033973c51",
            "subnet_id": "subnet-0c57f8a94cce5e116"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtbassoc-015ffab55a71f508f",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_nat_gateway.nat-gw-2",
            "aws_route_table.private_rt_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f93e7b8272cf33",
            "region": "ca-west-1",
            "route_table_id": "rtb-0adcc65e9e9fdc163",
            "subnet_id": "subnet-0b51dddc8e07c9d84"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtbassoc-083f93e7b8272cf33",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095e97ff92b54847d",
            "region": "ca-west-1",
            "route_table_id": "rtb-0adcc65e9e9fdc163",
            "subnet_id": "subnet-0363445d808e513f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "rtbassoc-095e97ff92b54847d",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:security-group/sg-0170fb5d08903befe",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0170fb5d08903befe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "854882517278",
            "region": "ca-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALBSG"
            },
            "tags_all": {
              "Name": "ALBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "sg-0170fb5d08903befe",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:security-group/sg-08f34953b8fb400ec",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f34953b8fb400ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http2",
            "name_prefix": "",
            "owner_id": "854882517278",
            "region": "ca-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebSG"
            },
            "tags_all": {
              "Name": "WebSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "sg-08f34953b8fb400ec",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:subnet/subnet-0a887f0a450bb60a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a887f0a450bb60a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854882517278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "Private_Subnet1"
            },
            "tags_all": {
              "Name": "Private_Subnet1"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "subnet-0a887f0a450bb60a6",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:subnet/subnet-0c57f8a94cce5e116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c57f8a94cce5e116",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854882517278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "Private_Subnet2"
            },
            "tags_all": {
              "Name": "Private_Subnet2"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "subnet-0c57f8a94cce5e116",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:subnet/subnet-0b51dddc8e07c9d84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b51dddc8e07c9d84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854882517278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "Public_Subnet1"
            },
            "tags_all": {
              "Name": "Public_Subnet1"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "subnet-0b51dddc8e07c9d84",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:subnet/subnet-0363445d808e513f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0363445d808e513f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854882517278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "Public_Subnet2"
            },
            "tags_all": {
              "Name": "Public_Subnet2"
            },
            "vpc_id": "vpc-0824f0ce85f5d271b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "subnet-0363445d808e513f0",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:vpc/vpc-0824f0ce85f5d271b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cead6c52a4c27efc",
            "default_route_table_id": "rtb-0e9703a22c3b13570",
            "default_security_group_id": "sg-052c361a058cf8e0d",
            "dhcp_options_id": "dopt-053b5a04377195a42",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0824f0ce85f5d271b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9703a22c3b13570",
            "owner_id": "854882517278",
            "region": "ca-west-1",
            "tags": {
              "Name": "custom_VPC"
            },
            "tags_all": {
              "Name": "custom_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "vpc-0824f0ce85f5d271b",
            "region": "ca-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:security-group-rule/sgr-06f87516ea44a924d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06f87516ea44a924d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-west-1",
            "security_group_id": "sg-08f34953b8fb400ec",
            "security_group_rule_id": "sgr-06f87516ea44a924d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "sgr-06f87516ea44a924d",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:security-group-rule/sgr-0349f83ad7d1d2d58",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0349f83ad7d1d2d58",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-west-1",
            "security_group_id": "sg-0170fb5d08903befe",
            "security_group_rule_id": "sgr-0349f83ad7d1d2d58",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "sgr-0349f83ad7d1d2d58",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:security-group-rule/sgr-03984b0eb627be579",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03984b0eb627be579",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-west-1",
            "security_group_id": "sg-08f34953b8fb400ec",
            "security_group_rule_id": "sgr-03984b0eb627be579",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "sgr-03984b0eb627be579",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:854882517278:security-group-rule/sgr-0cc4a3970c0a8a331",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0cc4a3970c0a8a331",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ca-west-1",
            "security_group_id": "sg-0170fb5d08903befe",
            "security_group_rule_id": "sgr-0cc4a3970c0a8a331",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854882517278",
            "id": "sgr-0cc4a3970c0a8a331",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}